# windows-utility

src/: CMakeLists.txt  README.md  cursor_manager.cpp  cursor_manager.h  drive_monitor.cpp  drive_monitor.h  main.cpp  process_manager.cpp  process_manager.h  registry_cleaner.cpp  registry_cleaner.h
